fix: use stable Bukkit teleport API